# libmfd

./: .gitignore  Makefile.am  README  configure.ac
examples/: Makefile.am  mfdmgr.cpp
include/: Makefile.am
include/libmfd/: Makefile.am  addressbook.hpp  device.hpp  devicetype.hpp  exceptions.hpp  libmfd.hpp  manager.hpp
src/: Makefile.am  device-ricoh-aficio.cpp  device-ricoh-aficio.hpp  exceptions.cpp  generate-gsoap  main.cpp  ricoh-udirectory.wsdl  stdsoap2.cpp
