library_includedir = $(includedir)/@libmfd_release@/libmfd/
nobase_library_include_HEADERS = addressbook.hpp
nobase_library_include_HEADERS += device.hpp
nobase_library_include_HEADERS += devicetype.hpp
nobase_library_include_HEADERS += libmfd.hpp
nobase_library_include_HEADERS += manager.hpp
nobase_library_include_HEADERS += exceptions.hpp
